--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,8 +2,8 @@ version: 0.2
 phases:
   build:
     commands:
-       - mv .env .local.env
-       - mv .prod.env .env
+       - mv .env .env.dev
+       - mv .env.prod .env
        - npm install
        - npm run build
 artifacts:
