--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-REACT_APP_BACKEND=http://localhost:4567
+REACT_APP_BACKEND=https://api.serverless.matrixscript.net
 PORT=80
 DISABLE_ESLINT_PLUGIN=true
