pointing UI to serverless v2

--- a/.env.prod
+++ b/.env.prod
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND=https://api.serverless.matrixscript.net
+REACT_APP_BACKEND=https://serverless.api.matrixscript.net
 DISABLE_ESLINT_PLUGIN=true
