--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-REACT_APP_BACKEND=https://api.serverless.matrixscript.net
+REACT_APP_BACKEND=https://serverless.api.matrixscript.net
 PORT=80
 DISABLE_ESLINT_PLUGIN=true
